# MyChatbot

./: .gitignore  ChatbotTextToText.py  README.md  config.py  main.py  package-lock.json  pyproject.toml  text_to_image_test.py
backend/: app.py  requirements.txt
chatbot-frontend/: package-lock.json  package.json
chatbot-frontend/src/api/: chatApi.ts
chatbot-frontend/src/components/: Chat.tsx
