[tool.poetry]
name = "my-chatbot"
package-mode = false
version = "0.1.0"
description = "A chatbot assistant using open-source LLM models"
authors = ["Melike Cankaya <melikekesskin@gmail.com>"]
readme = "README.md"
# homepage = "https://github.com/yourusername/chatbot-project"
# repository = "https://github.com/yourusername/chatbot-project"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
transformers = "^4.43.3"
tensorflow = "^2.21.0"
torch = "^2.0.0"
# django = "^4.2.0"  # Include if you plan to use Django for the web interface
huggingface-hub = ">=0.23.2,<1.0"  # Add this line
tf-keras = "2.21.0"
qwen-vl-utils = "^0.0.14"
pillow = "^12.2.0"
diffusers = "^0.37.1"
accelerate = "^1.13.0"
flask = "^3.1.3"
flask-cors = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"


[[tool.poetry.source]]
name = "vllm-rocm"
url = "https://wheels.vllm.ai/rocm"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
